--- a/WebContent/404.html
+++ b/WebContent/404.html
@@ -10,7 +10,7 @@
 		<div style="padding-top: 138px;">
 			<h2>您访问的页面不存在,请检查您访问的路径是否正确!</h2>
 			<h3>&nbsp;&nbsp;我们正在联系火星总部，尽快解决该问题。</h3>
-			<h3>&nbsp;&nbsp;您可以: <a href="/edc/main">返回主页</a>或者<a href="./">刷新</a></h3>		
+			<h3>&nbsp;&nbsp;您可以: <a href="/pspc/main">返回主页</a>或者<a href="./">刷新</a></h3>		
 		</div>
 	</div>
 </body>
